# Legalassistant

./: .dockerignore  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MASTER_PROMPT.md  Makefile  PITCH.md  PROGRESS.md  Procfile  README.md  SECURITY.md  SOCIAL_MEDIA.md  SOCIAL_MEDIA_TRACTION.md  USER_RESEARCH.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  railway.toml  render.yaml  vercel.json
.claude/agents/: code-reviewer.md
.claude/commands/: add-adr.md  progress.md  verify.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  mobile.yml
backend/: main.py
backend/actions/: checklist_generator.py  letter_generator.py  rights_generator.py
backend/audio/: transcriber.py
backend/deadlines/: detector.py  tracker.py
backend/documents/: analyzer.py  (+1 more)
docs/: ACTIONS.md  API.md  CI_CD.md  DATABASE.md  DEADLINES.md  DEPLOYMENT.md  DOCUMENT_PIPELINE.md  EXPORT.md  EXTENDING.md  FRONTEND.md  GLOSSARY.md  LEGAL_DOMAINS.md  LEGAL_KNOWLEDGE_BASE.md  MEMORY_SYSTEM.md  MOBILE.md  MODELS.md  PAYMENTS.md  REFERRALS.md  RIGHTS_LIBRARY.md  RUNBOOK.md  SECURITY.md  TESTING.md  UTILS.md  VERIFICATION.md  WORKFLOWS.md  email-campaigns.md
mobile/: app.json  eas.json  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
scripts/: migrate-waitlist-to-auth.ts  pitch_script.md  seed_demo.py  smoke_test.py  verify_deployment.sh
social-media/: SOCIAL_MEDIA.md
tests/: conftest.py  test_action_generators.py  test_api_endpoints.py  test_audio_transcriber.py  test_audit_log.py  test_auth.py  test_circuit_breaker.py  test_client_singleton.py  test_concurrency.py  test_content_store.py  test_conversation_store.py  test_deadline_detector.py  test_deadline_tracker.py  test_document_analyzer.py  test_document_extractor.py  test_email_sender.py  test_idempotency.py  test_integration.py  test_legal_areas.py  test_legal_classifier.py  test_lifecycle.py  test_llm_router.py  test_memory_injector.py  test_models.py  test_openai_client.py  test_payments.py  test_pdf_generator.py  test_profile_crud.py  test_profile_updater.py  test_property_based.py  test_rate_limiter.py  test_referral_matcher.py  test_retry.py  test_rights_library.py  test_summarizer.py  test_telemetry.py  test_token_budget.py  test_workflow_engine.py  test_workflow_templates.py
waitlist/: package-lock.json  package.json  tailwind.config.ts
web/: Dockerfile  eslint.config.mjs  jest.config.js  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json
(+227 files in other folders)
