[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casemate"
version = "0.1.0"
description = "CaseMate — Personalized AI Legal Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.42.0",
    "supabase>=2.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "pdfplumber>=0.11.0",
    "fpdf2>=2.7.0",
    "python-multipart>=0.0.6",
    "PyJWT>=2.8.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyPDF2>=3.0.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.32.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ANN"]
ignore = ["S101", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"backend/knowledge/rights_library.py" = ["E501"]
"backend/workflows/templates/definitions.py" = ["E501"]
"backend/legal/state_laws.py" = ["E501"]
"backend/legal/states/*.py" = ["E501"]
"tests/*.py" = ["E501", "SIM117", "SIM101", "B008", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206"]
"backend/utils/auth.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_any_generics = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
